# kaldi-readers-for-tensorflow

./: CMakeLists.txt  kaldi-ali.cc  kaldi-matrix-direct.cc  kaldi-matrix.cc  readme.md  shape-funcs.cc  shape-funcs.hh
example/: read-ali.py  read-compressed-matrix.py  read-matrix.py  read-post.py  read-uncompressed-matrix.py
example/data/: ali.ark  ali.ark.txt  ali.scp  matrix-comp1.scp  matrix-comp2.ark  matrix-comp2.scp  matrix-comp3.ark  matrix-comp3.scp  matrix-comp4.ark  matrix-comp4.scp  matrix-comp5.ark  matrix-comp5.scp  matrix-comp6.ark  matrix-comp6.scp  matrix-comp7.ark  matrix-comp7.scp  matrix.ark.txt  matrix.compressed.scp  matrix.nocompress.ark  matrix.nocompress.scp  matrix.scp  post.ark  post.ark.txt  post.scp  ref.txt
